// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. DEFAULT template renders a single child element 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <View
    key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 0,
          },
        ]
      }
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      />
    </View>
  </View>
</View>
`;

exports[`2. DEFAULT template renders two child elements 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <View
    key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 0,
          },
        ]
      }
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      />
    </View>
  </View>
  <View
    key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
    </View>
  </View>
</View>
`;

exports[`3. DEFAULT template renders three child elements 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <View
    key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 0,
          },
        ]
      }
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      />
    </View>
  </View>
  <View
    key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
    </View>
  </View>
  <View
    key="08604618-fb0e-11e7-a987-7fcf5e9983de"
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983de"
      />
    </View>
  </View>
</View>
`;

exports[`4. LEAD_AND_TWO template renders a single child element 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 0,
          },
        ]
      }
    >
      <ExampleChild />
    </View>
  </View>
</View>
`;

exports[`5. LEAD_AND_TWO template renders two child elements 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 0,
          },
        ]
      }
    >
      <ExampleChild />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild />
    </View>
  </View>
</View>
`;

exports[`6. LEAD_AND_TWO template renders three child elements 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": "100%",
          },
          Object {
            "paddingTop": 0,
          },
        ]
      }
    >
      <ExampleChild />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild />
    </View>
  </View>
</View>
`;
